--- a/services.html
+++ b/services.html
@@ -34,10 +34,10 @@
 
    <section>
     <div class="position-relative d-flex align-items-center justify-content-center">
-    <div class="common_title mt-5">
+    <div class="common_title my-5">
         <div class="position-relative d-flex align-items-center justify-content-center">
-            <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Services</h1>
-            <h1 class="position-absolute text-uppercase text-primary">Services</h1>
+            <!-- <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Services</h1> -->
+            <!-- <h1 class="position-absolute text-uppercase text-primary">Services</h1> -->
         </div>
     </div>
     </div>
